--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
                     <h4 class="number">01</h4>
                     <h4><a href="graphics-design.html">Graphics Design</a></h4>
                     <p>We craft visually appealing graphics that communicate your brand's message clearly and effectively, helping you stand out in a crowded market.</p>
-                    <a href="graphics-design.html" class="read">Read more</a>
+                    <!-- <a href="graphics-design.html" class="read">Read more</a> -->
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 mt-md-0 mt-4">
@@ -105,7 +105,7 @@
                     <h4 class="number">02</h4>
                     <h4><a href="web-development.html">Web Development</a></h4>
                     <p>From responsive websites to complex web applications, we specialize in creating custom solutions that offer seamless user experiences.</p>
-                    <a href="web-development.html" class="read">Read more</a>
+                    <!-- <a href="web-development.html" class="read">Read more</a> -->
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 mt-4">
@@ -116,7 +116,7 @@
                     <h4 class="number">03</h4>
                     <h4><a href="ui-ux-design.html">UI/UX Design</a></h4>
                     <p>We design intuitive and user-friendly interfaces that deliver an exceptional experience, ensuring your users love every interaction with your product.</p>
-                    <a href="ui-ux-design.html" class="read">Read more</a>
+                    <!-- <a href="ui-ux-design.html" class="read">Read more</a> -->
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 mt-4">
@@ -127,7 +127,7 @@
                     <h4 class="number">04</h4>
                     <h4><a href="music-cover.html">Music Cover Design</a></h4>
                     <p>We create stunning music cover art that complements your music style and message, helping artists grab attention in the digital space.</p>
-                    <a href="music-cover.html" class="read">Read more</a>
+                    <!-- <a href="music-cover.html" class="read">Read more</a> -->
                 </div>
             </div>
         </div>
